# csvinfo

./: .gitignore  README.rst  pyproject.toml
src/csvinfo/: __init__.py  __main__.py
