[build-system]
    requires = ["setuptools >= 77.0.3"]
    build-backend = "setuptools.build_meta"
[project]
    name = "csvinfo"
    version = "0.0.1"
    authors = [
        { name="Jacob Striebel", email="author@example.com" }
    ]
    description = "csv and ssv mixed file parsing, and statistics tabulation"
    readme = "README.rst"
    license = "MIT"
    license-files = [ "LICENSE" ]
[project.urls]
    Homepage = "https://github.com/striebel/csvinfo"
[project.scripts]
    csvinfo = "csvinfo.__main__:main"
